# AI-Platform

./: # get_network_request response  .dockerignore  .env.example  .gitignore  .trivyignore  README.md  docker-compose.yml  requirements-base.txt  requirements-dev.txt  requirements-runtime.txt
.github/workflows/: ci.yml
auth_service/: Dockerfile
auth_service/auth_service/: main.py
file_service/: Dockerfile
file_service/file_service/: main.py
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/api-keys/: layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/conversations/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/files/: layout.tsx  page.tsx
frontend/src/app/login/: layout.tsx  page.tsx
frontend/src/app/memory/: layout.tsx  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: layout.tsx  page.tsx
frontend/src/app/usage/: page.tsx  (+1 more)
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts  auth-context.tsx
gateway/: Dockerfile
gateway/gateway/: main.py
llm_service/: Dockerfile  requirements.txt
llm_service/llm_service/: main.py
monitoring_service/: Dockerfile
monitoring_service/monitoring_service/: main.py
rag_worker/: Dockerfile  requirements.txt
rag_worker/rag_worker/: main.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  db.py  dependencies.py  jwt_utils.py  logging_utils.py  models.py  redis_client.py  security.py
(+4 files in other folders)
